--- a/Front/checkout/index.html
+++ b/Front/checkout/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../../../../favicon.ico">
+    <link rel="icon" href="/Front/checkout/imagens/360_F_402161358_LxtAMGUicBPdLkZOICowd2lFJm8iSZ6d.jpg">
 
     <title>Checkout example for Bootstrap</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
@@ -20,12 +20,44 @@
 
     <div class="container">
       <div class="py-5 text-center">
-        <img class="d-block mx-auto mb-4" src="https://getbootstrap.com/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
+        <img class="d-block mx-auto mb-4" src="/Front/checkout/imagens/360_F_402161358_LxtAMGUicBPdLkZOICowd2lFJm8iSZ6d.jpg" alt="" width="300">
         <h2>Registre-se</h2>
         <p class="lead">Aqui temos os melhores veterinarios e tratamento que o seu pet poderá encontrar.</p>
       </div>
 
-      <div class="row">          
+      <div class="row">
+        <div class="col-md-4 order-md-2 mb-4" style="margin-top: 10%;">
+          <h4 class="d-flex justify-content-between align-items-center mb-3">
+            <span class="text-muted">Our pets</span>
+            <span class="badge badge-secondary badge-pill">3</span>
+          </h4>
+          <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="/Front/checkout/imagens/1b82a5_503c2f4782ee416b8d65b75b3b9bea42_mv2.jpg" style="height: 300px; width: 600px;" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="imagens/caoideal2-1.png"  style="height: 300px; width: 600px;" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="/Front/checkout/imagens/gato-gato-fofo-gato-filhote-1585841507191_v2_450x337.jpg" style="height: 300px; width: 600px;" class="d-block w-100" alt="...">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        </div>
         <div class="col-md-8 order-md-1">
           <h4 class="mb-3">Billing address</h4>
           <form class="needs-validation" novalidate>
@@ -124,7 +156,9 @@
               </div>
             </div>
             <hr class="mb-4">
-            <button class="btn btn-primary btn-lg btn-block" type="submit">Registre-se</button>
+            <a href="../cover/index.html">
+              <button class="btn btn-primary btn-lg btn-block" type="submit">Registre-se</button>
+            </a>
           </form>
         </div>
       </div>
