--- a/Front/checkout/form.html
+++ b/Front/checkout/form.html
@@ -156,7 +156,7 @@
               </div>
             </div>
             <hr class="mb-4">
-            <a href="../cover/index.html">
+            <a href="../cover/home.css">
               <button class="btn btn-primary btn-lg btn-block" type="submit">Registre-se</button>
             </a>
           </form>
