--- a/Front/cover/home.html
+++ b/Front/cover/home.html
@@ -13,7 +13,7 @@
     <link href="../node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="cover.css" rel="stylesheet">
+    <link href="home.css" rel="stylesheet">
   </head>
 
   <body class="text-center">
@@ -56,7 +56,7 @@
                 </div>
                 <div class="modal-footer vstack gap-2 col-md-5 mx-auto">
                   <button type="button" class="btn btn-danger buttonHover" >Sign in</button>
-                  <a href="../checkout/index.html">
+                  <a href="../checkout/form.html">
                   <button type="button" class="btn btn-outline-dark">Sign up</button></a>
                 </div>
               </form>
